# ODDs

./: .gitignore  .gitmodules  .odd.h.swo  .odd.h.swp  .printing.c.swo  .printing.c.swp  CMakeLists.txt  Contributors.md  ContributorsList.txt  Doxyfile  LICENSE  Makefile  ODD-Mysave_after.txt  ODD-Mysave_before.txt  ODD-ToMinimize.txt  ODD-ToMinimize2.txt  README.md  cloneKill.c  cloneKill.h  collapse_ODD  collapse_ODD.c  complete.c  completion.c  completion_test.c  debugTools.c  debugTools.h  deterministic.c  incompleteODD.txt  intersection.c  intersectionParallel.c  main.c  makefile  membership.c  membershipParallel.c  memorization.c  minimization.c  minimization_save.c  negation.c  odd.h  odd2.txt  (+17 more)
lib/: ODDs.cpp  ODDs.h
lib/ODDs/: JSONDump.cpp  JSONDump.h  ODDs.cpp  ODDs.h  Operations.cpp  Operations.h
test/: DivisionODDs.cpp  JSONLayers.cpp  ODDBuilder.cpp  ODDsIntersection.cpp  ODDsMapping.cpp  ODDsMinimization.cpp  ODDsNegation.cpp  ODDsPowerSet.cpp  ODDsStructures.cpp  ODDsTensorProduct.cpp  ODDsUnion.cpp  Sample.cpp
test/Common/: DivisionODDs.cpp  DivisionODDs.h
test_cases/completion_test/: completion.c  completion_test.c.save  makefile  odd.h  printing.c  resultODD.txt
test_cases/intersection_test/: ODD-Example-MOD4.txt  ODD1-Example.txt  ODD2-Example.txt  intersection_test.c
test_cases/memorization_test/: memorization_test.c
test_cases/power_test/: ODD-example-power.txt  ODD-example.txt  power_tests.c
test_cases/tensor_test/: odd1.txt  odd2.txt  out.txt  tensor_test.c
test_cases/union_test/: even.txt  oddodd.txt  output.txt  union_test.c
